Fixed location search error message and nav bar alignment

--- a/client/src/styles/css/header.css
+++ b/client/src/styles/css/header.css
@@ -7,7 +7,7 @@ header {
   top: 0;
   left: 0;
   z-index: 2;
-  width: 100%;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
