--- a/client/src/styles/scss/nav.scss
+++ b/client/src/styles/scss/nav.scss
@@ -64,6 +64,7 @@ header{
 #PlacesAutocomplete__root {
 	height: inherit;
 	float: left;
+	width: auto !important;
 }
 
 .dropdown-toggle {
